Fixed_Alignment

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
     font-family:"Outfit";
     margin: 0;
     padding: 0;
-    height: 100vw;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@ body{
     height: 400px;
     width: 250px;
     background-color: hsl(0, 0%, 100%);
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 15px;
 }
 .qr-image{
